syntax = "proto3";

//same name as the pom
option java_package = "com.dateTimeService";
//this line does not change
option java_multiple_files = true;
//Name of the service to be implemented
option java_outer_classname = "dateTimeServiceImpl";

service dateTimeService{

	rpc GetDateTime(containsDateTime) returns (containsDateTime){}

}

message containsDateTime{
	string dateTime = 1;
}
